# apfel-bench

./: .gitignore  LICENSE  Makefile  README.md
backend/: pyproject.toml
backend/apfel_bench/: api.py  benchmark.py  client.py  main.py  storage.py  streaming.py
backend/apfel_bench/benchmarks/: __init__.py  adversarial.py  chain_of_thought.py  code_execution.py  factual_qa.py  hallucination.py  instruction_following.py  json_shape.py  latency.py  multi_constraint.py  smoke.py
backend/tests/: test_adversarial.py  test_api.py  test_api_stream.py  test_chain_of_thought.py  test_chat.py  test_code_execution.py  test_factual_qa.py  test_hallucination.py  test_http_client.py  test_http_client_stream.py  test_instruction_following.py  test_json_shape.py  test_latency.py  test_multi_constraint.py  test_smoke.py  test_storage.py  test_streaming.py
data/: .gitkeep
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  latencyStats.ts  main.tsx  sse.ts  styles.css  types.ts
frontend/src/components/: BenchmarkDetail.tsx  BenchmarksPanel.tsx  ChatPanel.tsx  LatencyChart.tsx  ResultsPanel.tsx  ResultsTable.tsx
frontend/tests/: App.test.tsx  BenchmarkDetail.test.tsx  ChatPanel.test.tsx  api.test.ts  chatStream.test.ts  latencyStats.test.ts  setup.ts  sse.test.ts
scripts/: dev.sh  start-apfel.sh  stop-apfel.sh
