[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apfel-bench"
version = "0.1.0"
description = "Benchmarks, chat, and results dashboard for Apple's on-device FoundationModel via apfel"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "httpx>=0.27",
  "pydantic>=2.6",
  "sse-starlette>=2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "respx>=0.21",  # for httpx mocking
]

[tool.hatch.build.targets.wheel]
packages = ["apfel_bench"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
  "integration: requires a live apfel server at APFEL_URL",
]

[tool.coverage.run]
source = ["apfel_bench"]
